--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       </form>
       <div class="content">
         <div id="tab-view"></div>
-
+        <div id="keyword-list-view"></div>
+        <div id="history-list-view"></div>
         <div id="search-result-view"></div>
       </div>
     </div>
